--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,25 @@
-body {
-    background-color: black; /* Set background to black */
-    color: white;           /* Set text color to white */
-    font-family: Arial, sans-serif; /* Font style */
-    text-align: center;     /* Center align text */
-    padding: 50px;          /* Add some padding */
+.page {
+ position: relative;
+ overflow: hidden;
 }
 
-h1 {
-    font-size: 2.5em;       /* Font size for the heading */
+.page .video-bg {
+ width: 100%;
+ height: 0;
+ padding-bottom: 56.25%;/* Aspect ratio */
+ position: absolute;
 }
 
-p {
-    font-size: 1.2em;       /* Font size for the paragraph */
+.page .video-bg iframe {
+ border: 0;
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+}
+
+.page .content {
+ position: relative;
+ z-index: 1;
 }
